# ubirch-thgs

./: .gitignore  CMakeLists.txt  README.md
sketches/: CMakeLists.txt
sketches/blink/: blink.cpp
sketches/ledLOFlogic/: CMakeLists.txt  ledLOFlogic.cpp
sketches/ledform/: CMakeLists.txt  ledform.cpp
sketches/ledmatrix/: CMakeLists.txt  ledmatrix.cpp
sketches/prototype/: CMakeLists.txt  prototype.cpp
sketches/sunday/: CMakeLists.txt  sunday.cpp
sketches/switch/: CMakeLists.txt  switch.cpp
sketches/tft/: CMakeLists.txt  tft.cpp
sketches/tftbitmap/: CMakeLists.txt  tftbitmap.cpp
sketches/tfttext/: CMakeLists.txt  tfttext.cpp
sketches/thgsmodul/: CMakeLists.txt  thgsmodul.cpp
